force-app/main/default/objects/Booking__c/fields/Contact_No_of_Referer_Customer_Custome__c.field-meta.xml
<CustomField>
    <fullName>Contact_No_of_Referer_Customer_Custome__c</fullName>
    <label>Contact No. of Referer Customer (Custome</label>
    <type>Phone</type>
</CustomField>