force-app/main/default/objects/Booking__c/fields/CP_Invoice_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice_Approval_Status__c</fullName>
    <label>CP Invoice Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved By L1</fullName>
            </value>
            <value>
                <fullName>Approved By L2</fullName>
            </value>
            <value>
                <fullName>Rejected By L1</fullName>
            </value>
            <value>
                <fullName>Rejected By L2</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>