force-app/main/default/objects/Booking__c/fields/CP_Mandate_Recovery_Date__c.field-meta.xml
<CustomField>
    <fullName>CP_Mandate_Recovery_Date__c</fullName>
    <label>CP Mandate Recovery Date</label>
    <type>Date</type>
</CustomField>