force-app/main/default/objects/Booking__c/fields/Credited_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credited_Amount__c</fullName>
    <label>Credited Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>