force-app/main/default/objects/Booking__c/fields/Cretaed_On__c.field-meta.xml
<CustomField>
    <fullName>Cretaed_On__c</fullName>
    <label>Created On</label>
    <type>Date</type>
</CustomField>