force-app/main/default/objects/Booking__c/fields/Custom_Base_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Custom_Base_Brokerage__c</fullName>
    <label>Custom Base Brokerage</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>