force-app/main/default/objects/Booking__c/fields/Customer_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category_Type__c</fullName>
    <label>Customer Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Management Bookings</fullName>
            </value>
            <value>
                <fullName>Barter Deal Customer</fullName>
            </value>
            <value>
                <fullName>Legal Case</fullName>
            </value>
            <value>
                <fullName>CIP-Canc. in Process</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>