force-app/main/default/objects/Booking__c/fields/Customer_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_formula__c</fullName>
    <formula>Primary_Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>