force-app/main/default/objects/Booking__c/fields/Customer_Payment_Received1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Received1__c</fullName>
    <formula>IF(RW_X9_99_Received__c == true,&apos;more than 9.9%&apos;,
			Text(round(( (RW_Total_Amount_Received_Without_GST__c*100)/Allotment_Premium__c),2))&amp;&apos;%&apos;)</formula>
    <label>Customer Payment Received%</label>
    <type>Text</type>
</CustomField>