force-app/main/default/objects/Booking__c/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <label>Customer Reference Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>