force-app/main/default/objects/Booking__c/fields/Customer_reference_Book_Unit__c.field-meta.xml
<CustomField>
    <fullName>Customer_reference_Book_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer reference Booked Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Booking (Customer reference Book Unit)</relationshipLabel>
    <relationshipName>Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>