force-app/main/default/objects/Booking__c/fields/Customer_Reference_Flat_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Flat_No__c</fullName>
    <formula>Customer_Reference_Opportunity__r.Booking__r.Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Reference Flat No.</label>
    <type>Text</type>
</CustomField>