force-app/main/default/objects/Booking__c/fields/Customer_Reference_Primary_Applicant_Nam__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Primary_Applicant_Nam__c</fullName>
    <formula>Customer_Reference_Opportunity__r.Booking__r.Primary_Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Reference Primary_Applicant_Nam</label>
    <type>Text</type>
</CustomField>