force-app/main/default/objects/Booking__c/fields/Customer_reference_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_reference_SAP_Code__c</fullName>
    <formula>Opportunity__r.Customer_reference_SAP_Code__c</formula>
    <label>Customer reference SAP Code</label>
    <type>Text</type>
</CustomField>