force-app/main/default/objects/Booking__c/fields/Date_for_offer_of_Possession__c.field-meta.xml
<CustomField>
    <fullName>Date_for_offer_of_Possession__c</fullName>
    <label>Date for offer of Possession</label>
    <type>Date</type>
</CustomField>