force-app/main/default/objects/Booking__c/fields/Date_of_Occupation_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Occupation_Certificate__c</fullName>
    <label>Date of Occupation Certificate</label>
    <type>Date</type>
</CustomField>