force-app/main/default/objects/Booking__c/fields/Days_between_Booking_5__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Booking_5__c</fullName>
    <formula>SO_Release_Date_in_SAP__c  - DATEVALUE(Booking_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days between Booking &amp; 5%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>