force-app/main/default/objects/Booking__c/fields/Days_between_Booking_9_90__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Booking_9_90__c</fullName>
    <formula>X9_90_Received_Date__c - DATEVALUE(Booking_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days between Booking &amp; 9.90%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>