force-app/main/default/objects/Booking__c/fields/Days_till_9_90_Received__c.field-meta.xml
<CustomField>
    <fullName>Days_till_9_90_Received__c</fullName>
    <formula>TODAY() - X9_90_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days till 9.90% Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>