force-app/main/default/objects/Booking__c/fields/Deed_of_Cancellation_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Deed_of_Cancellation_Upload_Date__c</fullName>
    <label>Deed of Cancellation Upload Date</label>
    <type>Date</type>
</CustomField>