force-app/main/default/objects/Booking__c/fields/Demanded__c.field-meta.xml
<CustomField>
    <fullName>Demanded__c</fullName>
    <formula>RW_Total_Demand_Raised__c / Customer__r.RW_Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demanded % (with tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>