force-app/main/default/objects/Booking__c/fields/Demanded_Principal__c.field-meta.xml
<CustomField>
    <fullName>Demanded_Principal__c</fullName>
    <formula>Total_Demand_Raised_Principal__c / Customer__r.RW_Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demanded % (Principal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>