force-app/main/default/objects/Booking__c/fields/Deviation_Approval_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Approval_Doc_Id__c</fullName>
    <label>Deviation Approval Doc Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>