force-app/main/default/objects/Booking__c/fields/Deviation_Approval_Doc_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Approval_Doc_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deviation Approval Doc Uploaded?</label>
    <type>Checkbox</type>
</CustomField>