force-app/main/default/objects/Booking__c/fields/Dif_Br__c.field-meta.xml
<CustomField>
    <fullName>Dif_Br__c</fullName>
    <formula>Actual_Brokerage_Value__c - Cal_Brk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference of Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>