force-app/main/default/objects/Booking__c/fields/Difference_of_Referral__c.field-meta.xml
<CustomField>
    <fullName>Difference_of_Referral__c</fullName>
    <formula>Actual_Referral_Amount__c - Calculated_Referral_Amount__c</formula>
    <label>Difference of Referral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>