force-app/main/default/objects/Booking__c/fields/Do_Not_Create_Welcome_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Welcome_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Create Welcome Call</label>
    <type>Checkbox</type>
</CustomField>