force-app/main/default/objects/Booking__c/fields/Document_Checklist_Link_del__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist_Link_del__c</fullName>
    <formula>IF( AND(NOT(ISPICKVAL(Status__c, &quot;UnProcessed&quot;)),NOT(ISPICKVAL( Status__c,&quot;Cancelled&quot; )),NOT(ISPICKVAL( Verification_status__c,&quot;Accepted&quot; ))), HYPERLINK(&quot;https://c.cs5.visual.force.com/apex/NewDocumentChecklistPage?Id=&quot;+Id,&quot;Click Here&quot; ), &quot;&quot;)</formula>
    <label>Document Checklist Link</label>
    <type>Text</type>
</CustomField>