force-app/main/default/objects/Booking__c/fields/Emp_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Emp_Manager_Name__c</fullName>
    <label>Employee Reference Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>