force-app/main/default/objects/Booking__c/fields/Exclude_From_Brokerage_Batch__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Brokerage_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Brokerage Batch</label>
    <type>Checkbox</type>
</CustomField>