force-app/main/default/objects/Booking__c/fields/F_B_CAM__c.field-meta.xml
<CustomField>
    <fullName>F_B_CAM__c</fullName>
    <label>F &amp; B CAM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>