force-app/main/default/objects/Booking__c/fields/FBL5N__c.field-meta.xml
<CustomField>
    <fullName>FBL5N__c</fullName>
    <label>FBL5N Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>