force-app/main/default/objects/Booking__c/fields/Final_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Final_Brokerage__c</fullName>
    <formula>Base_Brokerage__c - Custom_Base_Brokerage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>