force-app/main/default/objects/Booking__c/fields/Final_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Refund_Amount__c</fullName>
    <label>Final Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>