force-app/main/default/objects/Booking__c/fields/Flat_Typology__c.field-meta.xml
<CustomField>
    <fullName>Flat_Typology__c</fullName>
    <label>Flat Typology</label>
    <length>30</length>
    <type>Text</type>
</CustomField>