force-app/main/default/objects/Booking__c/fields/Forfeit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Forfeit_Percentage__c</fullName>
    <label>Forfeit Percentage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>