force-app/main/default/objects/Booking__c/fields/Forfeiture_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Amount_Type__c</fullName>
    <label>Forfeiture Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total received amount</fullName>
            </value>
            <value>
                <fullName>Agreement value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>