force-app/main/default/objects/Booking__c/fields/Future_Correspondence_Contact__c.field-meta.xml
<CustomField>
    <fullName>Future_Correspondence_Contact__c</fullName>
    <label>Future Correspondence Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Applicant</fullName>
            </value>
            <value>
                <fullName>2nd Applicant</fullName>
            </value>
            <value>
                <fullName>3rd Applicant</fullName>
            </value>
            <value>
                <fullName>4th Applicant</fullName>
            </value>
            <value>
                <fullName>5th Applicant</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>