force-app/main/default/objects/Booking__c/fields/Future_Correspondence_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Future_Correspondence_Contact_Name__c</fullName>
    <label>Future Correspondence Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>