force-app/main/default/objects/Booking__c/fields/Future_Correspondence_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Future_Correspondence_Contact_Phone__c</fullName>
    <label>Future Correspondence Phone</label>
    <type>Phone</type>
</CustomField>