force-app/main/default/objects/Booking__c/fields/Future_Correspondence_Phone__c.field-meta.xml
<CustomField>
    <fullName>Future_Correspondence_Phone__c</fullName>
    <formula>(&quot;XXXXX&quot;&amp;right( Future_Correspondence_Contact_Phone__c ,5))</formula>
    <label>Future Correspondence Phone.</label>
    <type>Text</type>
</CustomField>