force-app/main/default/objects/Booking__c/fields/GST_Tax_G__c.field-meta.xml
<CustomField>
    <fullName>GST_Tax_G__c</fullName>
    <label>GST Tax (G)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>