force-app/main/default/objects/Booking__c/fields/IFSC_Code_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code_Service_Tax__c</fullName>
    <label>IFSC Code(ST)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>