force-app/main/default/objects/Booking__c/fields/Interest_to_be_Applied__c.field-meta.xml
<CustomField>
    <fullName>Interest_to_be_Applied__c</fullName>
    <label>Interest Applied On Booking ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>