force-app/main/default/objects/Booking__c/fields/Interest_Value__c.field-meta.xml
<CustomField>
    <fullName>Interest_Value__c</fullName>
    <label>Interest Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>