force-app/main/default/objects/Booking__c/fields/Interest_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Interest_with_GST__c</fullName>
    <label>Interest with GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>