force-app/main/default/objects/Booking__c/fields/Invoice_Submitted_by_CP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submitted_by_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Submitted by CP</label>
    <type>Checkbox</type>
</CustomField>