force-app/main/default/objects/Booking__c/fields/IOM_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>IOM_Document_Id__c</fullName>
    <label>IOM Document Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>