force-app/main/default/objects/Booking__c/fields/IOM_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>IOM_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IOM Document Uploaded?</label>
    <type>Checkbox</type>
</CustomField>