force-app/main/default/objects/Booking__c/fields/Is_AOP_CP_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_AOP_CP_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AOP CP Applicable</label>
    <type>Checkbox</type>
</CustomField>