force-app/main/default/objects/Booking__c/fields/Is_Retained__c.field-meta.xml
<CustomField>
    <fullName>Is_Retained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retained</label>
    <type>Checkbox</type>
</CustomField>