force-app/main/default/objects/Booking__c/fields/Is_Special_Brokerage_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Brokerage_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Brokerage Scheme</label>
    <type>Checkbox</type>
</CustomField>