force-app/main/default/objects/Booking__c/fields/isSigned__c.field-meta.xml
<CustomField>
    <fullName>isSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSigned</label>
    <type>Checkbox</type>
</CustomField>