force-app/main/default/objects/Booking__c/fields/Kicker_Incentive_lookup__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kicker Incentive</label>
    <referenceTo>Kicker_Incentive__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>