force-app/main/default/objects/Booking__c/fields/Latest_Demand_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Demand_Due_Date__c</fullName>
    <label>Latest Demand Due Date</label>
    <summarizedField>RW_Demand__c.Due_Date__c</summarizedField>
    <summaryForeignKey>RW_Demand__c.Booking__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>