force-app/main/default/objects/Booking__c/fields/Level_Two_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_Two_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level Two Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking2</relationshipName>
    <type>Lookup</type>
</CustomField>