force-app/main/default/objects/Booking__c/fields/Loan_Bank__c.field-meta.xml
<CustomField>
    <fullName>Loan_Bank__c</fullName>
    <label>Loan Bank Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_Names</valueSetName>
    </valueSet>
</CustomField>