force-app/main/default/objects/Booking__c/fields/MG_Effect_Date__c.field-meta.xml
<CustomField>
    <fullName>MG_Effect_Date__c</fullName>
    <label>MG Effect Date</label>
    <type>Date</type>
</CustomField>