force-app/main/default/objects/Booking__c/fields/MG_Mon_Year_Val__c.field-meta.xml
<CustomField>
    <fullName>MG_Mon_Year_Val__c</fullName>
    <label>MG Mon./Year Val.</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>