force-app/main/default/objects/Booking__c/fields/MG_Months_Year__c.field-meta.xml
<CustomField>
    <fullName>MG_Months_Year__c</fullName>
    <label>MG Months/Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month(s)</fullName>
            </value>
            <value>
                <fullName>Years(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>