force-app/main/default/objects/Booking__c/fields/MG_Per_Amt__c.field-meta.xml
<CustomField>
    <fullName>MG_Per_Amt__c</fullName>
    <label>MG Per./Amt.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>