force-app/main/default/objects/Booking__c/fields/MG_Per_Amt_Val__c.field-meta.xml
<CustomField>
    <fullName>MG_Per_Amt_Val__c</fullName>
    <label>MG Per./Amt. Val.</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>