force-app/main/default/objects/Booking__c/fields/Mode_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Cancellation__c</fullName>
    <label>Mode of Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>