force-app/main/default/objects/Booking__c/fields/Monthly_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Collection_Status__c</fullName>
    <label>Monthly Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collectable</fullName>
            </value>
            <value>
                <fullName>Non-Collectable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>