force-app/main/default/objects/Booking__c/fields/MVAT__c.field-meta.xml
<CustomField>
    <fullName>MVAT__c</fullName>
    <label>MVAT(M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>