force-app/main/default/objects/Booking__c/fields/Net_Rate__c.field-meta.xml
<CustomField>
    <fullName>Net_Rate__c</fullName>
    <formula>Allotment_Premium__c / Unit_No__r.Saleable_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>