force-app/main/default/objects/Booking__c/fields/New_Flat_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Flat_Agreement_Value__c</fullName>
    <label>New Flat Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>