force-app/main/default/objects/Booking__c/fields/New_Unit__c.field-meta.xml
<CustomField>
    <fullName>New_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Booking (New Unit)</relationshipLabel>
    <relationshipName>Booking2</relationshipName>
    <type>Lookup</type>
</CustomField>