force-app/main/default/objects/Booking__c/fields/Next_Reminder_Date_5_Payment__c.field-meta.xml
<CustomField>
    <fullName>Next_Reminder_Date_5_Payment__c</fullName>
    <label>Next Reminder Date 5% Payment</label>
    <type>Date</type>
</CustomField>