force-app/main/default/objects/Booking__c/fields/NOTE__c.field-meta.xml
<CustomField>
    <fullName>NOTE__c</fullName>
    <label>NOTE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>