force-app/main/default/objects/Booking__c/fields/Old_Booking__c.field-meta.xml
<CustomField>
    <fullName>Old_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>