force-app/main/default/objects/Booking__c/fields/Old_Opp_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_Opp_Status__c</fullName>
    <label>Old Opp Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>