force-app/main/default/objects/Booking__c/fields/Old_status__c.field-meta.xml
<CustomField>
    <fullName>Old_status__c</fullName>
    <label>Old status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>