force-app/main/default/objects/Booking__c/fields/Original_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Agreement_Value__c</fullName>
    <formula>Quotation__r.Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>