force-app/main/default/objects/Booking__c/fields/Other_Forfeiture_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Forfeiture_Amount__c</fullName>
    <label>Other Forfeiture Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>