force-app/main/default/objects/Booking__c/fields/Passback__c.field-meta.xml
<CustomField>
    <fullName>Passback__c</fullName>
    <formula>ROUND(IF(Passback_Amount__c &gt; 0,Passback_Amount__c  /  Agreement_Value_for_brokers__c, 0),4)</formula>
    <label>Passback %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>